[package]
name = "pi-pico-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.3"
embedded-graphics = "0.7"
embedded-hal ="0.2.5"
embedded-time = "0.12.0"
nb = "1"
panic-halt= "0.2.0"
rp-pico = "0.4"
ssd1351 = "0.4"

[profile.release]
debug = 2
