[package]
name = "fw-embassy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-polyfill = "0.1.5"
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.3"
embassy-executor = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy",features = ["defmt", "unstable-traits", "nightly", "unstable-pac"] }
embassy-util = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy",features = ["defmt"] }
embedded-graphics = "0.7"
embedded-hal-1 = { package = "embedded-hal", version = "1.0.0-alpha.8" }
embedded-hal-async = { version = "0.1.0-alpha.1" }
futures = { version = "0.3", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
nb = "1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
ssd1351 = "0.4"
